<resources>
    <string name="app_name">pokedex-android-kotlin</string>
    <string name="pok_dex">Pokédex</string>
    <string name="what_pok_mon_are_you_looking_for">What Pokémon are you looking for?</string>
    <string name="search_fo_pok_mon_by_name_or_using_the_national_pok_dex_number">Search fo Pokémon by name or using the National Pokédex number.</string>
    <string name="pokemon_imagem">Pokemon imagem</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="stats">Stats</string>
    <string name="evolution">Evolution</string>
    <string name="sort_pok_mons_alphabetically_or_by_national_pok_dex_number">Sort Pokémons alphabetically or by National Pokédex number!</string>
    <string name="sort">Sort</string>
    <string name="filters">Filters</string>
    <string name="use_advanced_search_to_explore_pok_mon_by_type_weaknes_height_and_more">Use advanced search to explore Pokémon by type, weaknes, height and more!</string>
    <string name="button_filter">button filter</string>
    <string name="button_generations">button generations</string>
    <string name="button_sort">button sort</string>
    <string name="weaknesses">Weaknesses</string>
    <string name="icon_for_filter">icon for filter</string>
    <string name="types">Types</string>
    <string name="the_ranges_shown_on_the_right_are_for_a_level_100_pok_mon_maximum_values_are_base_on_a_beneficial_nature_252_evs_31_lvs_minimum_values_are_base_on_hindering_nature_0_evs_0_lvs">The ranges shown on the right are for a level 100 Pokémon, Maximum values are base on a beneficial nature, 252 Evs, 31 lVs; minimum values are base on hindering nature, 0 Evs, 0 lVs.</string>
    <string name="the_effectiveness">The effectiveness of each type on Charmander.</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="smallest">Smallest number first</string>
    <string name="z_a">Z-A</string>
    <string name="a_z">A-Z</string>
    <string name="highest">Highest number first number first</string>
    <string-array name="rangeSlider">
        <item>20</item>
        <item>70</item>
    </string-array>
</resources>